force-app/main/default/objects/Developer_Account__c/Developer_Account__c.object-meta.xml
<CustomObject>
    <label>Developer Account</label>
    <nameField>
        <label>Developer Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Developer Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>