force-app/main/default/objects/Developer_Account__c/fields/Beneficial_Owners__c.field-meta.xml
<CustomField>
    <fullName>Beneficial_Owners__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Beneficial Owners?</label>
    <type>Checkbox</type>
</CustomField>