force-app/main/default/objects/Developer_Account__c/fields/Business_Country_Of_Incorporation__c.field-meta.xml
<CustomField>
    <fullName>Business_Country_Of_Incorporation__c</fullName>
    <formula>TEXT(Contact__r.Country_Of_Incorporation_DA__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Country Of Incorporation</label>
    <type>Text</type>
</CustomField>