force-app/main/default/objects/Developer_Account__c/fields/Business_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Name__c</fullName>
    <formula>Contact__r.Business_Name_DA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Name</label>
    <type>Text</type>
</CustomField>