force-app/main/default/objects/Developer_Account__c/fields/Developer_Account_Entity_ID__c.field-meta.xml
<CustomField>
    <fullName>Developer_Account_Entity_ID__c</fullName>
    <label>Developer Account Entity ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>