force-app/main/default/objects/Developer_Account__c/fields/Developer_Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Developer_Account_Status__c</fullName>
    <defaultValue>&apos;SANDBOX&apos;</defaultValue>
    <label>Developer Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SANDBOX</fullName>
            </value>
            <value>
                <fullName>APPROVED</fullName>
            </value>
            <value>
                <fullName>REJECTED</fullName>
            </value>
            <value>
                <fullName>MORE_TIME_NEEDED</fullName>
                <label>MORE TIME NEEDED</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>