force-app/main/default/objects/Developer_Account__c/fields/Developer_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Developer_Account_Type__c</fullName>
    <label>Developer Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>INDIVIDUAL</fullName>
            </value>
            <value>
                <fullName>BUSINESS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>