force-app/main/default/objects/Developer_Account__c/fields/Diameter_URL__c.field-meta.xml
<CustomField>
    <fullName>Diameter_URL__c</fullName>
    <description>Diameter URL

Asana - https://app.asana.com/0/1203473392486179/1206361791793888</description>
    <formula>HYPERLINK(&quot; https://diameter.circle.com/developers/&quot;+ Developer_Account_Entity_ID__c, &quot; https://diameter.circle.com/developers/&quot;+ Developer_Account_Entity_ID__c,&apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Diameter URL</label>
    <type>Text</type>
</CustomField>