force-app/main/default/objects/Developer_Account__c/fields/Email_Verified__c.field-meta.xml
<CustomField>
    <fullName>Email_Verified__c</fullName>
    <formula>IF(Contact__r.Developer_Account_Email_Verified__c = &apos;true&apos;, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Verified</label>
    <type>Checkbox</type>
</CustomField>