force-app/main/default/objects/Developer_Account__c/fields/Metronome_Charge_ID__c.field-meta.xml
<CustomField>
    <fullName>Metronome_Charge_ID__c</fullName>
    <label>Metronome Charge ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>