force-app/main/default/objects/Developer_Account__c/fields/Metronome_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Metronome_Customer_ID__c</fullName>
    <formula>Account__r.Metronome_Customer_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Metronome Customer ID</label>
    <type>Text</type>
</CustomField>