force-app/main/default/objects/Developer_Account__c/fields/Metronome_Plan_Added__c.field-meta.xml
<CustomField>
    <fullName>Metronome_Plan_Added__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Metronome Plan Added</label>
    <type>Checkbox</type>
</CustomField>