force-app/main/default/objects/Developer_Account__c/fields/Nature_Of_Business__c.field-meta.xml
<CustomField>
    <fullName>Nature_Of_Business__c</fullName>
    <formula>TEXT(Contact__r.Nature_Of_Business_DA__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nature Of Business</label>
    <type>Text</type>
</CustomField>