force-app/main/default/objects/Developer_Account__c/fields/Primary_Place_Of_Business__c.field-meta.xml
<CustomField>
    <fullName>Primary_Place_Of_Business__c</fullName>
    <formula>TEXT(Contact__r.Primary_Place_Of_Business_DA__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Place Of Business</label>
    <type>Text</type>
</CustomField>