force-app/main/default/objects/Developer_Account__c/fields/Retry_Metronome_Send__c.field-meta.xml
<CustomField>
    <fullName>Retry_Metronome_Send__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retry Metronome Send</label>
    <type>Checkbox</type>
</CustomField>