force-app/main/default/objects/Developer_Account__c/fields/Send_To_Metronome_Immediately__c.field-meta.xml
<CustomField>
    <fullName>Send_To_Metronome_Immediately__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send To Metronome Immediately</label>
    <type>Checkbox</type>
</CustomField>