force-app/main/default/objects/Developer_Account__c/fields/What_Do_You_Plan_To_Build__c.field-meta.xml
<CustomField>
    <fullName>What_Do_You_Plan_To_Build__c</fullName>
    <formula>Contact__r.What_Do_You_Plan_To_Build_Text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>What Do You Plan To Build</label>
    <type>Text</type>
</CustomField>