force-app/main/default/objects/Developer_Account__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>What_Do_You_Plan_To_Build__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Email__c</columns>
    <columns>Developer_Account_Status__c</columns>
    <columns>Developer_Account_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>